:bug: fix smoothscroll not working in div overflow: scroll.

--- a/src/assets/scss/payment/main.scss
+++ b/src/assets/scss/payment/main.scss
@@ -86,5 +86,45 @@
         }
       }
     }
+
+    .wrapper-content {
+      .order-box {
+        background: $white1;
+        padding: 5px;
+        height: 40vh;
+        overflow-y: scroll;
+
+        box-shadow: inset 0 0 3px 1px $gray2;
+
+        .order-item {
+          padding: 10px 3px;
+          margin-top: 5px;
+          margin-bottom: 5px;
+
+
+          img {
+            width: 100%;
+            border-radius: 5px;
+            // box-shadow: 0 0 3px 1px $gray2;
+          }
+
+          .row {
+            display: flex;
+            align-items: center;
+
+            .col {
+              margin: 0;
+              padding: 0px 13px 0px 0px;
+              text-align: right;
+              color: $green1;
+
+              @include tablet {
+                font-size: 16px;
+              }
+            }
+          }
+        }
+      }
+    }
   }
 }
